# sensordb

./: Cargo.toml  README.md
.sqlx/: query-020a4d029c0565325741a839601f5cec8591042e73c44cd586e4c54160cf0f2f.json  query-35b1925a791dffe95589677e1309ebddd42d27a128d57d9aaf58b5e8c9594737.json  query-3708eb5a7a7f078f5dcd1cb66ad0c4da39cb4760d5684f757a5127ef30546daf.json  query-4c2722f4d25061fc6b2359b47b8a74ff4b8227976e80a313b7e3e52c67107196.json  query-50b1ca638482bba587e94e1cadf1e9e2ef1613229ea395f3e5322428b0b37026.json  query-770bebaea158dcac7f71bace567156f69160ac1c315121644e28f4e37dd223de.json  query-8a455f57c4e6debb0b6e1dbe342b3fa161605e32ca8cc5b83deea575d94d0286.json  query-8b18074c73acc55f91aa238592f46bafd822a0fb933ee3d8f47f1beeb8a34b43.json  query-93b7986e69dee0ea81dc187fe675fb0c5f60e7a82eab4be946173a1f6a30b495.json  query-e6a26d883ddd9266b2143dcc888d606d62faf7e236d7b03c5ec7be746e961fe1.json  query-e9021da875efaea7305041388898572f8f7f72180cc09bb27f1f99578fb272ce.json  query-f2ebc4ec38be94692771e3cfb7322f218a89c7801e40ebb862cede6d00c0563f.json  query-f5fd7a273b6c40959660d769e7b3bc8f8ea44aecbd51155c76d5760fedc7b39d.json
crates/sensordb/: Cargo.toml
crates/sensordb-cli/: Cargo.toml
crates/sensordb-cli/src/: cli.rs  error.rs  main.rs
crates/sensordb-cli/src/commands/: associate.rs  clean.rs  crop_city_model.rs  enrich_city_model.rs  estimate_signatures.rs  export.rs  export_feature_list.rs  export_signatures.rs  generate_sensor_views.rs  import_point_cloud.rs  import_rosbag.rs  info.rs  mod.rs  statistics.rs
crates/sensordb-core/: Cargo.toml
crates/sensordb-core/src/: error.rs  lib.rs  point_cloud_extensions.rs
crates/sensordb-core/src/database/: datatype.rs  mod.rs  tables.rs  util.rs
crates/sensordb-core/src/database/manager/: associate.rs  clean.rs  export.rs  generate.rs  import.rs  manager.rs  misc.rs  mod.rs  operations.rs
crates/sensordb-core/src/database/queries/: association.rs  enrichment.rs  export.rs  export_signatures.rs  generate_sensor_views.rs  import_point_cloud.rs  import_trajectories.rs  mod.rs  statistics.rs
crates/sensordb-core/src/io/: mod.rs  sensors.rs  statistics.rs
crates/sensordb/src/: lib.rs
database/: Dockerfile
database/docker-scripts/: sensordb-initdb.sh
database/schema-mapping/: sensor_specification_schema.json
database/sql-scripts/: create-db.sql  drop-db.sql
database/sql-scripts/schema/: datatype-instances.sql  namespace-instances.sql  schema.sql  views.sql
database/sql-scripts/sensordb-pkg/: association-functions.sql  geometry-functions.sql  point-cloud-functions.sql  srs.sql  trajectory-functions.sql
docs/: faqs.md  queries.md  schema.md
