[workspace]
members = [
    "crates/*"
]

resolver = "2"

[workspace.package]
version = "0.0.1-alpha.13"
authors = ["Benedikt Schwab <benedikt.schwab@gmail.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tum-gis/sensordb"

[workspace.dependencies]
erosbag = { version = "0.0.1-alpha.13" }
epoint = { version = "0.0.1-alpha.13" }
ecoord = { version = "0.0.1-alpha.13" }

thiserror = "2.0.18"
anyhow = "1.0.101"
clap = "4.5.58"
indicatif = "0.18.3"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
serde = "1.0.228"
serde_json = "1.0.149"
strum = "0.27.2"
strum_macros = "0.27.2"
humantime = "2.3.0"
sqlx = "0.8.6"
tokio = "1.49.0"
nalgebra = "0.34.1"
itertools = "0.14.0"
polars = "0.52.0"
ndarray = "0.17.2"
chrono = "0.4.43"
rayon = "1.11.0"
sysinfo = "0.38.1"
walkdir = "2.5.0"
palette = "0.7.6"
sanitize-filename = "0.6.0"
