[package]
name = "sensordb"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Tool for analyzing sensor data by leveraging semantic environment models."


[dependencies]
sensordb-core = { version = "0.0.1-alpha.13", path = "../sensordb-core" }
